--- a/education.html
+++ b/education.html
@@ -115,7 +115,7 @@
                 <span class="edu-year">2018 – 2022</span>
                 <h3><a href="https://maps.app.goo.gl/XCRxK1x916rVSQTu7" target="_blank" class="school-link">SBP Integrasi Selandar</a></h3>
                 <p>A transformative boarding school experience focused on independence and leadership.</p>
-                <div class="edu-results">🏆 <b>SPM 2022:</b> 6A 5B+ 1B</div>
+                <div class="edu-results">🏆 <b>SPM 2022:</b> 6A 5B+ 1C</div>
                 <a href="https://maps.app.goo.gl/XCRxK1x916rVSQTu7" target="_blank" class="map-btn"><span>📍 View on Map</span></a>
             </div>
         </div>
@@ -173,4 +173,5 @@
 <script src="education.js"></script>
 
 </body>
+
 </html>
